# accelrod

./: .gitignore  README.md  example.ipynb  example.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
accelrod/: benchmark.py
